🎉 feat: complete logging and ai docking